--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
@@ -4,7 +4,7 @@ RUP es producto del proceso de ingeniería de software, que proporciona un enfoq
 
 ### Dimensiones del Modelo
 
-El RUP tiene dos dimensiones, el eje horizontal representa tiempo y demuestra los aspectos del ciclo de vida del proceso, mientras que el eje vertical representa las disciplinas, que agrupan actividades definidas lógicamente por la naturaleza.
+El RUP tiene dos dimensiones, el eje horizontal representa tiempo y demuestra los aspectos del ciclo de vida del proceso, esta dimensión es dinámica. Mientras que el eje vertical representa las disciplinas, que agrupan actividades definidas lógicamente por la naturaleza, esta dimensión es estática, ya que las disciplinas siempre serán las mismas.
 
 ![[dimensiones_RUP.png]]
 
@@ -51,8 +51,8 @@ Al mismo tiempo cada ciclo de RUP está compuesto por fases y cada una de estas 
 
 1. **Inicio**: Se define el ámbito y objetivos del proyecto, al igual que la funcionalidad y capacidades del producto.
 2. **Elaboración**: Tanto la funcionalidad como el dominio del problema se estudian en profundidad. Se define una arquitectura básica y se planifica el proyecto considerando recursos disponibles, para finalizar con la creación de los casos de uso.
-3. **Construcción**: El producto se desarrolla a través de iteraciones donde cada iteración involucra tareas de análisis, diseño e implementación. En esta fase se refina la arquitectura de manera incremental conforme se construye el sistema (se permiten cambios en la estructura). Gran parte del trabajo es programación y pruebas. Se documenta tanto el sistema construido como el manejo del mismo. El resultado de esta fase es un producto funcional junto con la documentación.
-4. **Transición**: Se libera el producto y se entrega al usuario para un uso real. Se incluyen tareas de marketing, empaquetado atractivo, instalación, configuración, entrenamiento, soporte, mantenimiento, entre otras. Los manuales de usuario se completan y refinan con la información anterior, estas tareas se realizan también en iteraciones. 
+3. **Construcción**: El producto se desarrolla a través de iteraciones donde cada iteración involucra tareas de análisis, diseño e implementación de los modelos del sistema. En esta fase se refina la arquitectura de manera incremental conforme se construye el sistema (se permiten cambios en la estructura). Gran parte del trabajo es programación y pruebas. Se documenta tanto el sistema construido como el manejo del mismo. El resultado de esta fase es un producto funcional junto con la documentación.
+4. **Transición**: Se libera el producto y se entrega al usuario para un uso real. Se incluyen tareas de marketing, empaquetado atractivo, instalación, configuración, entrenamiento, soporte, mantenimiento, entre otras. Los manuales de usuario se completan y refinan con la información anterior, estas tareas se realizan también en iteraciones.
 
 >[!tldr] Ventajas y Desventajas del Modelo
 >- **Ventajas**:
