--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -14,7 +14,7 @@ Entre los distintos servicios que nos brindan los protocolos de transporte se en
 A la hora de enviar datos a través de una red, la capa de transporte recibe los segmentos (PDU) desde la capa de red, y debe entregarlos a los procesos apropiados que corren en los hosts. Por ejemplo: un usuario ejecutando varias aplicaciones (ftp, telnet, http) entonces es necesario direccionar los segmentos a cada uno de los procesos.
 Cada proceso tiene un ***socket*** que es el lugar por donde se reciben y entregan los datos entre la capa de red y la capa de transporte. Puede haber más de un socket abierto, por eso cada socket tiene un identificar único, según sea TCP o UDP.
 - La *Desmultiplexación* es una tarea realizada por la capa de transporte, en el cual se revisan un conjunto de campos dentro del segmento, con el fin de identificar el socket reseptor.
-- La *Multiplezación* es la tarea que consiste en reunir los distintos paquetes de datos de los distintos sockets para luego crear los segmentos que se pasaran a la capa de red.>
+- La *Multiplezación* es la tarea que consiste en reunir los distintos paquetes de datos de los distintos sockets para luego crear los segmentos que se pasaran a la capa de red.
 
 Cada uno de los sockets debe tener un identificador único, además, cada segmento debe tener un campo que indique a que socket debe entregarse el segmento. Véase en la imagen un modelo simplificado de segmento:
 
@@ -24,13 +24,13 @@ Cada uno de los sockets debe tener un identificador único, además, cada segmen
 >Cada puerto tiene un número de 16 bits que va de 0 a 65.535. De los cuales los puertos del 0 al 1023 son los llamados “***well-know***” y están reservados para ser usados por protocolos de aplicación, los demás son puertos “***efímeros***” que pueden ser usados por procesos que quieren direccionar a esos protocolos de aplicación.
 >Si se desea saber más sobre los distintos tipos de puertos puede visitar el sitio de la [Autoridad Asignadora de Números de Internet (IANA)](www.iana.org).
 
-### Protocolo TCP (Transmission Control Protocol)
+### Transmission Control Protocol (TCP)
 
-El Protocolo de Control de Transmisión es uno de los métodos de comunicación de datos por defecto utilizado por distintos dispositivos, a través de una red. Este establece y mantiene una conexión entre el emisor y el receptor durante el proceso de transferencia. Las principales características de este método son:
+El Protocolo de Control de Transmisión es uno de los métodos de transferencia de datos fiable, ya que utiliza técnicas de control de flujo, números de secuencia, mensajes de reconocimiento y temporizadores para garantizar que los datos transmitidos por el emisor sean entregados al receptor. Este protocolo establece y mantiene una conexión entre el emisor y el receptor durante el proceso de transferencia. Las principales características de este método son:
 
 1. **Servicio Orientado a la Conexión**: TCP hace que el cliente y el servidor se intercambien información de control en la capa de transporte antes de empezar la transferencia. Esto se llama handshaking. A partir de allí existe una conexión full-duplex entre los sockets. Una vez finalizada la transferencia de datos se rompe la conexión entre ambos sockets.
 2. **Servicio Fiable de Transporte**: Envía el flujo de datos entre sockets sin cometer errores y en el orden correcto.
-3. **Control de Congestión**: Regula el proceso de emisión de segmentos cuando la red está congestionada.
+3. **Control de Congestión**: Regula el proceso de emisión de segmentos cuando la red está congestionada, el protocolo se esfuerza para garantizar a cada conexión que atraviesa por un enlace congestionado la misma cuota de ancho de banda del enlace, esto se logra regulando la velocidad con la que los emisores pueden enviar paquetes a la red.
 
 Con la desventaja de que TCP no garantiza una tasa de transmisión mínima, es decir, que la velocidad de transferencia va a depender de como se regule la congestión en la red. Además, que este método no proporciona garantía de retardo.
 
@@ -47,9 +47,10 @@ Con la desventaja de que TCP no garantiza una tasa de transmisión mínima, es d
 >	- ARQ con adelante-atrás N.
 >	- ARQ con rechazo selectivo.
 
-### Protocolo UDP (User Datagram Protocol)
+### User Datagram Protocol (UDP)
 
-El Protocolo de Datagrama de Usuario es un protocolo de comunicación que se utiliza en Internet para transmisiones sujetas a limitaciones temporales, como la reproducción de vídeo o las búsquedas en DNS. Acelera las comunicaciones al no establecer formalmente una conexión antes de transferir los datos. Esto permite que los datos se transfieran muy rápido, pero también puede hacer que los paquetes se pierdan en tránsito. Las características principales de este protocolo son las siguientes:
+El Protocolo de Datagrama de Usuario es un protocolo de comunicación que se utiliza en Internet para transmisiones sujetas a limitaciones temporales, como la reproducción de vídeo o las búsquedas en DNS. Acelera las comunicaciones al no establecer formalmente una conexión antes de transferir datos, por eso se dice que es un protocolo no fiable, ya que no garantiza la llegada de los datos a destino.
+Este protocolo permite que los datos se transfieran muy rápido, pero también puede hacer que los paquetes se pierdan. Las características principales de este protocolo son las siguientes:
 - Protocolo de transporte sin conexión.
 - Toma los mensajes de la aplicación, añade los campos con los números del puerto de origen y de destino, le suma otros dos campos y pasa el segmento a la capa de red. Es decir, la aplicación está interactuando casi directamente con la capa IP.
 - Función de multiplexado y desmultiplexado.
