Agrego bibliografía U3 Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -51,20 +51,20 @@ Con la desventaja de que TCP no garantiza una tasa de transmisión mínima, es d
 
 El Protocolo de Datagrama de Usuario es un protocolo de comunicación que se utiliza en Internet para transmisiones sujetas a limitaciones temporales, como la reproducción de vídeo o las búsquedas en DNS. Acelera las comunicaciones al no establecer formalmente una conexión antes de transferir datos, por eso se dice que es un protocolo no fiable, ya que no garantiza la llegada de los datos a destino.
 Este protocolo permite que los datos se transfieran muy rápido, pero también puede hacer que los paquetes se pierdan. Las características principales de este protocolo son las siguientes:
+
 - Protocolo de transporte sin conexión.
-- Toma los mensajes de la aplicación, añade los campos con los números del puerto de origen y de destino, le suma otros dos campos y pasa el segmento a la capa de red. Es decir, la aplicación está interactuando casi directamente con la capa IP.
+- Transferencia de datos no fiable.
+- Toma los mensajes de la aplicación, añade los campos con los números del puerto de origen y de destino, y dos campos más correspondientes al control de errores y pasa el segmento a la capa de red. Es decir, la aplicación está interactuando casi directamente con la capa IP.
 - Función de multiplexado y desmultiplexado.
 - Mínimo chequeo de errores.
-- Servicio de transporte sin conexión entre las partes involucradas.
-- Transferencia de datos no fiable.
 - No tiene control de congestión.
 - No proporciona garantía sobre los retardos.
 
-Algunas aplicaciones que normalmente usan UDP son:
-- **NFS** (Network File System): Servidor de archivos en red.
-- **DNS** (Domain Name System) Sistema de resolución de nombres de dominio.
-- **SNMP** (Simple Network Management Protocol) Gestión de red.
-- **RIP** (Routing Internet Protocol).
-- Telefonía sobre internet.
-- Difusión multimedia.
+Existen muchas aplicaciones que utilizan UDP por sobre TCP por las siguientes razones:
 
+1. Se posee un mayor control en el nivel de aplicación sobre que datos se envían, ya que una vez que el proceso de la capa de aplicación envía los datos a la capa de transporte, se agregan de forma casi inmediata los encabezados UDP y se pasa directamente a la capa de red.
+2. No se establece una conexión entre el emisor y receptor, esto resulta conveniente cuando el tamaño y volúmenes de los datos son pequeños. Esto permite un menor tiempo en el envío de datos.
+3. No requiere mantener información sobre el estado de la conexión lo que a los servidores tener más clientes activos de manera simultánea.
+4. Escasa sobrecarga en las cabeceras del segmento, dado que el encabezado de UDP solo ocupa 8 bytes, en lugar de 20 como pasa son TCP.
+
+Por estas razones, es que protocolos como el NFS, SNMP, RIP o incluso DNS utilizan UDP a la hora de enviar información a otros equipos, además los servicios de telefonía sobre internet y la difusión multimedia suelen emplear este protocolo debido a su velocidad.
