--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Servicio de Nombre de Dominio (DNS).md
@@ -45,7 +45,7 @@ Al proceso de buscar un nombre y encontrar una dirección se le conoce como ***r
 La forma en la que se resuelven los nombres de dominio puede darse de dos formas:
 
 - **Iterativa**: El agente retiene el control sobre el proceso de resolución y llama a cada uno de los servidores de nombres. La consulta comienza por el primer servidor del ***pathname***.
-- **Recursiva**: El agente envía el requerimiento al sistema de nombres raíz y este servidor se encarga de contactarse con los demás servidores de nombres, hasta encontrar el objeto en el último nombre del ***pathname***, en pocas palabras delega toda la resolución a los demás sistemas de nombres. Esta forma suele ser la más ampliamente usada debido a su eficiencia.
+- **Recursiva**: El agente envía el requerimiento al sistema de nombres raíz y este servidor se encarga de contactarse con los demás servidores de nombres, hasta encontrar el objeto en el último nombre del ***pathname***, en pocas palabras delega toda la resolución a los demás servidores de nombres. Esta forma suele ser la más ampliamente usada debido a su eficiencia.
 
 >[!tldr] Sistema de Caching de los Servidores DNS
 >Cuando un servidor DNS resuelve la dirección IP de un nombre de dominio, almacena temporalmente esa información en su caché. El propósito de esta caché es reducir la necesidad de futuras búsquedas para el mismo nombre de dominio, lo que ahorra tiempo y reduce la carga en los servidores DNS.
