--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Protocolos de Internet.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Protocolos de Internet.md
@@ -1,7 +1,7 @@
 En el nivel de las aplicaciones de usuario existen una amplia variedad de protocolos de red, que se utilizan para diversos motivos, por ejemplo, HTTP para transferir hipertextos o NFS para compartir archivos a través de una red.
 Las principales características que tienen estos protocoles de nivel de aplicación es la siguiente:
 
-- Implementan modelo cliente-servidor como entorno de trabajo..
+- Implementan modelo cliente-servidor como entorno de trabajo.
 - Son inherentemente distribuidas.
 - Facilitan compartir recursos a grandes distancias.
 - Distribuyen la carga entre varios servidores para mejorar el tiempo de respuesta.
@@ -86,14 +86,13 @@ La infraestructura de los correos electrónicos está compuesta, además de por 
 1. Los ***agentes de usuario*** que le permiten a los distintos usuarios leer sus correos electrónicos.
 2. Los ***servidores de correo***, son una pieza central de la infraestructura de correos, en estos servidores se tendrá un buzón de entrada para cada usuario.
 
-Por lo general cuando se envía un correo, este se dirige primero al servidor de correos del emisor, a través del puerto 23, y de allí al servidor de correos del destinatario, el servidor del emisor no puede enviar dicho mensaje al servidor del receptor, el mensaje se coloca en una cola de mensajes e intenta enviarlo más tarde. En este contexto, SMTP es el protocolo principal utilizado para enviar correos a través de la red, este protocolo se ejecuta en todos los servidores de correos actuando como cliente y servidor al mismo tiempo.
+Por lo general cuando se envía un correo, este se dirige primero al servidor de correos del emisor, a través del puerto 25, y de allí al servidor de correos del destinatario, si el servidor del emisor no puede enviar dicho mensaje al servidor del receptor, el mensaje se coloca en una cola de mensajes e intenta enviarlo más tarde. SMTP es el protocolo principal utilizado para enviar correos a través de la red, este protocolo se ejecuta en todos los servidores de correos actuando como cliente y servidor al mismo tiempo.
 SMTP tiene algunos defectos como el hecho de que todos los encabezados deben estar codificados utilizando ASCII, lo que lo vuelve inseguro, debido a que cualquiera que intercepte la conexión puede leer el encabezado del mensaje, además de ser tedioso a la hora de enviar archivos multimedia, ya que todo debe ser codificado al ASCII. Otro gran problema es que SMTP no utiliza servidores de correos intermedios para realizar los envíos, esto quiere decir que si dos servidores se encuentran geográficamente en dos regiones distintas, la conexión TCP será directa a pesar de lo inconveniente que esto resulta.
 
 ##### Multipurpose Internet Mail Extension (MIME)
 
-Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño, otros códigos, además de ASCII. Además, en su especificación se definen nuevos campos en la cabecera del mensaje, formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato.
-La codificación de los mensajes se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
-
+Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño y otros códigos, además de ASCII. En su especificación se definen nuevos campos en la cabecera del mensaje, formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato deseado. La codificación de los mensajes en MIME se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
+MIME no es un protocolo por si mismo, sino que es una mejora SMTP el cual solo agrega campos extras a los encabezados, lo que le permite enviar una gama más amplia de información. Además de implementar una mayor seguridad utilizando cifrado para sus mensajes.
 ##### Protocolos de Acceso al Correo
 
 Existen protocolos especiales de acceso al correo para transferencia de mensajes desde el servidor de correo a la PC local, entre ellos encontramos:
