--- a/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
+++ b/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
@@ -1,6 +1,6 @@
 
 >[!tldr] Definición de Bases de Datos
->Una base de datos es una colección de datos almacenados de forma coherente, dichos datos poseen cierta relación entre sí y son de relevantes para las empresas o personas que lo almacenan.
+>Una base de datos es una colección de datos almacenados de forma coherente, dichos datos poseen cierta relación entre sí y son de relevancia para las empresas o personas que lo almacenan.
 
 ## Sistemas de Gestión de Bases de Datos
 
@@ -32,7 +32,7 @@ El objetivo final de este sistema multinivel es lograr la separación de las apl
 3. **Nivel de Vistas** (externo): Describe sólo parte de la base de datos completa.
 
 >[!tldr] Independencia de Datos
->Las aplicaciones dependen de los **esquemas lógicos**, por eso se intenta lograr cierta dependencia, de forma que podamos tener la capacidad de modificar una definición de esquema a un nivel sin que afecte la definición de esquema en el nivel inmediato superior. Dicha independencia de datos se puede dar en distintos niveles:
+>Las aplicaciones dependen de los **esquemas lógicos**, por eso se intenta lograr cierta independencia, de forma que podamos tener la capacidad de modificar una definición de esquema a un nivel sin que afecte la definición de esquema en el nivel inmediato superior. Dicha independencia de datos se puede dar en distintos niveles:
 >- **Independencia Física de los Datos**: Es la capacidad de modificar el esquema físico (interno) sin tener que alterar el esquema conceptual (ni externo).
 >- **Independencia Lógica de los Datos**: Es la capacidad de modificar el esquema lógico sin alterar el esquema externo ni los programas de aplicación.
 
