--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -1,5 +1,5 @@
 El **modelo relacional** fue introducido en 1970 por el matemático Edgar D. Codd, y debido a su simplicidad, la posibilidad de poder realizar consultas de manera declarativa y su fundamento matemático tuvo una amplia difusión.
-En este modelo se representa a las Bases de datos como una colección de archivos en forma tabular que se denominan ***relaciones***, las cuales poseen dos elementos, las tuplas (filas) y sus atributos (columnas). Cada atributo de una relación posee un nombre, el conjunto de valores permitidos para cada uno de estos atributos recibe el nombre de ***dominio***, los valores de estos atributos deben ser atómicos, es decir, no admite atributos compuestos o multivaluados. Además, los atributos poseen un valor especial, *el nulo*, el cual es miembro de todos los dominios existentes. Formalmente, sean $A_1, A_2, \dots, A_n$ atributos, $R = (A_1, A_2, \dots, A_n)$ es el esquema de la relación e $r(R)$ es una relación en el esquema $R$, es decir, una instancia del esquema $R$.
+En este modelo se representa a las Bases de datos como una colección de archivos en forma tabular que se denominan ***relaciones***, las cuales poseen dos elementos, las tuplas (filas) y sus atributos (columnas). Cada atributo de una relación posee un nombre, el conjunto de valores permitidos para cada uno de estos atributos recibe el nombre de ***dominio***. Los valores para los atributos deben ser atómicos, es decir, no admite atributos compuestos o multivaluados. Además, los atributos poseen un valor especial, *el nulo*, el cual es miembro de todos los dominios existentes. Formalmente, sean $A_1, A_2, \dots, A_n$ atributos, $R = (A_1, A_2, \dots, A_n)$ es el esquema de la relación e $r(R)$ es una relación en el esquema $R$, es decir, una instancia del esquema $R$.
 En este contexto la información se divide en partes, donde cada una de esas partes almacena parte de la información, esto se hace porque de esta forma evitamos la repetición de la información y el uso excesivo de los valores nulos, los cuales suelen causar muchos problemas.
 
 ## Lenguajes de Consultas
@@ -47,7 +47,7 @@ r \cap s = \{t|t\in r \land t \in s\}
 $$
 - **Reunión Natural**. Formalmente denotado como $r \Join s$, donde $r$ y $s$ son relaciones. La relación natural de $r$ y $s$ es una relación en $R \cup S$ y se obtiene de la siguiente manera:
 	- Considere cada par de tuplas $t_r$ de $r$ y $t_s$ de $s$.
-	- Si $t_r$ y $r_s$ tienen el mismo valor de los atributos en $R \cap S$, se agrega una tupla $t$ al resultado, donde:
+	- Si $t_r$ y $t_s$ tienen el mismo valor de los atributos en $R \cap S$, se agrega una tupla $t$ al resultado, donde:
 		- $t$ tiene el mismo valor que $t_r$ en $r$.
 		- $t$ tiene el mismo valor que $t_s$ en $s$.
  - **División**. Formalmente denotado como $r \div s$, donde $r$ y $s$ son relaciones. Resulta adecuado a la hora de realizar consultas del tipo "*todos los*", por ejemplo, sea $r(R)$ y $s(S)$ relaciones y $S \subseteq R$, el resultado de $r \div s$ es una relación sobre el esquema $R - S$.
@@ -72,7 +72,7 @@ En donde $E$ es cualquier tipo de expresión del álgebra relacional, $G_1, G_2,
 - **Reuniones Externas**. Es una ampliación de la operación reunión para trabajar con la información que falta, existen 3 tipos de reuniones externas, la reunión externa por izquierda, por derecha y la completa. Las tres formas de la reunión externa calculan la reunión y añaden tuplas adicionales al resultado de la misma, con la desventaja de que añade valores nulos, lo que puede generar problemas a la hora de realizar cálculos.
 - **Borrar**. En el álgebra relacional, los borrados se expresan de la siguiente manera, $r \leftarrow r- E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
 - **Inserción**. En el álgebra relacional, las inserciones se expresan de la siguiente manera, $r \leftarrow r \cup E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
-- **Actualización**. Se puede utilizar el operador proyección generalizada para realizar esta tarea de la siguiente manera -> $r \leftarrow \varPi_{F^1, F^2, \dots ,F^i}(r)$, donde cada $F_i$ es el i-ésimo atributo de $r$. En caso de que el atributo no se modifique solo se indica el atributo, pero en caso de que si se actualice se debe utilizar una expresión que implique constantes y los atributos de $r$.
+- **Actualización**. Se puede utilizar el operador proyección generalizada para realizar esta tarea de la siguiente manera -> $r \leftarrow \varPi_{F^1, F^2, \dots ,F^i}(r)$, donde cada $F_i$ representa una función que se aplica a cada i-ésimo atributo de $r$. En caso de que el atributo no se modifique solo se indica el atributo, pero en caso de que si se actualice se debe utilizar una expresión que implique constantes y los atributos de $r$.
 
 ### Cálculo Relacional de Tuplas
 
@@ -105,7 +105,7 @@ Cuya interpretación sería: todos los conjuntos de tuplas para el cuales el pre
 >\begin{align*}
 >\{t| \exists \ r \in cliente (r[nombre\_cliente] = t[nombre\_cliente]) \ \land \\ 
 >(\forall \ u \in sucursal (u[ciudad\_sucursal] = \text{"Arganzuela"} ) \Rightarrow \\ 
->\exists \ s \in impostor (t[nombre\_cliente] = s[nombre\_cliente] \\ 
+>\exists \ s \in impositor (t[nombre\_cliente] = s[nombre\_cliente] \\ 
 >\land \ \exists \ w \in cuenta (w[numero\_cuenta] = s[numero\_cuenta] \\ 
 >\land \ w[nombre\_sucursal] = u[nombre\_sucursal])))\}
 >\end{align*}
