--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -120,19 +120,15 @@ SELECT nombre_sucursal
 	WHERE activo > SOME(SELECT activo
 							FROM sucursal
 							WHERE ciudad_sucursal = 'Barcelona');
-```
 
-```sql
 -- Todas las sucursales que tengan un activo mayor a todas las sucursales de
 -- Barcelona
 SELECT nombre_sucursal
 	FROM sucursal
 	WHERE activo > ALL(SELECT activo
 							FROM sucursal
-							WHERE ciudad_sucursal = ‘Barcelona’)
-```
+							WHERE ciudad_sucursal = 'Barcelona');
 
-```sql
 -- Clientes que tengan una cuenta en todas las sucursales de Barcelona
 SELECT DISTINCT S.nombre_cliente
 	FROM depositante S
@@ -143,7 +139,7 @@ SELECT DISTINCT S.nombre_cliente
 					  (SELECT R.nombre_sucursal
 						FROM depositante T, cuentas R
 						WHERE T.numero_cuenta = R.numero_cuenta AND
-							  S.nombre_cliente = T.nombre_cliente))
+							  S.nombre_cliente = T.nombre_cliente));
 ```
 
 >[!note] Explicación de la Lógica de la Consulta
@@ -161,7 +157,7 @@ SELECT nombre_sucursal, res.saldo_medio
 	WHERE res.saldo_medio > 1200;
 ```
 
-En esta formulación no es necesario el uso de la cláusula `HAVING` dado que la relación temporal res se calcula en la cláusula `FROM`, y los atributos de la nueva relación de nombre ***res*** se pueden usar directamente en la cláusula `WHERE`.
+En esta formulación no es necesario el uso de la cláusula `HAVING` dado que la relación temporal ***res*** se calcula en la cláusula `FROM`, y los atributos de la nueva relación de nombre ***res*** se pueden usar directamente en la cláusula `WHERE`.
 ### Reunión de Relaciones (JOIN)
 
 Las operaciones de reunión toman como entrada dos relaciones y devuelven como resultado otra relación. Los ***tipos de reunión*** definen cómo se tratan las tuplas de cada relación que no encajan con ninguna tupla de la otra relación y la ***condición de reunión*** indica las tuplas pertenecientes a las dos relaciones que encajan y los atributos que se incluyen en el resultado de la reunión.
