--- a/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
+++ b/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
@@ -23,7 +23,7 @@ En bases de datos, las claves son atributos de las entidades que se utilizan par
 - **Superclave**: Es el conjunto de una o más atributos cuyos valores determinan inequívocamente cada entidad, es decir, el valor de ese atributo o atributos son únicos para cada entidad del conjunto.
 - **Clave Candidata**: Son los atributos de una entidad que son una superclave minimal, es decir, aspiran a convertirse en superclave.
 
-Aunque puedan existir varias claves candidatas, una de estas se establece como ***clave primaria***.
+Aunque puedan existir varias claves candidatas, solo una de estas se establece como ***clave primaria***.
 
 >[!tldr] Claves para Conjuntos de Relaciones
 >La estructura de la clave primaria para el conjunto de relaciones depende de la correspondencia de cardinalidades asociada al conjunto de relaciones.
@@ -33,7 +33,7 @@ Aunque puedan existir varias claves candidatas, una de estas se establece como *
 ### Conjunto de Entidades Débiles
 
 Un ***conjunto de entidades débiles*** (CED) es un conjunto de entidades que no tiene suficientes atributos para formar una clave primaria.
-Los conjunto de entidades débiles, deben asociarse con otro conjunto de entidades denominado el ***conjunto de entidades identificadoras o propietarias*** (CEI). La relación que asocia el CED con el CEI se denomina ***relación identificadora***.
+Los conjunto de entidades débiles, deben asociarse con otro conjunto de entidades denominado ***conjunto de entidades identificadoras o propietarias*** (CEI). La relación que asocia el CED con el CEI se denomina ***relación identificadora***.
 - La relación identificadora es de varios a uno desde el CED al CEI y la participación del CED es total, es decir, tiene cardinalidad 1..\*.
 
 El ***discriminante*** de un CED, es un conjunto de atributos que permite distinguir todas aquellas entidades del conjunto de entidades que dependen de una entidad fuerte particular. Mientras que la clave primaria de un CED se forma con la clave primaria del CEI, más el discriminante del CED.
