--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -29,12 +29,12 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 
 ![[varios-uno.png]]
 
-- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos sus atributos correspondientes y una de esas tablas tendrá un atributo más que será la clave primaria de la otra entidad con la que se esté relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la regla de normalización que apliquemos
+- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos sus atributos correspondientes y una de esas tablas tendrá un atributo más que será la clave primaria de la otra entidad con la que se esté relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la regla de normalización que apliquemos.
 
 ![[uno-uno-total.png]]
 
 - Los atributos compuestos se representan de manera plana, separando un atributo por cada componente del atributo, es decir, cada componente del atributo se representa como una columna de la tabla.
-- Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno de los atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
+- Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno de los atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria de la tabla $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
 - Para las relaciones recursivas, es decir, aquellas entidades que tengan una relación consigo misma, se las va a representar de formas diferentes de acuerdo a la aridad que posea dicha relación.
 	- Si la relación es de uno a varios, se puede agregar un atributo más a la entidad que haga referencia, mediante su clave primaria, a otra fila de la tabla, por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo **jefe** a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
 	- Si la relación es de varios a varios, se crea una tabla intermedia que contenga los atributos de la relación (en caso de que dicha relación tenga atributos) y el par de identificadores del empleado y del jefe.
