Unidad 4 Redes, Falta lo de ruteo y protocolo IP/ICMP

--- a/4º Año/Comunicaciones y Redes/Veremos/Protocolo TCP/2. IPv6 -DHCP- Mobile IP.md
+++ b/4º Año/Comunicaciones y Redes/Veremos/Protocolo TCP/2. IPv6 -DHCP- Mobile IP.md
@@ -3,8 +3,8 @@
 Comienzo en años 90 por parte del IETF como respuesta al agotamiento de direcciones de 32 bits de la versión 4. 
 Cambios mas significativos son: 
 	• Capacidad de direccionamiento extendida: direcciones IP de 128 bits. 
-	• Cabecera flexible de 40 bytes 
-	• Etiquetado de flujo y prioridad: permite identificar paquetes que necesitan un tratamiento especial, por ejemplo tiempo real o calidad de servicio (QoS)
+	• Cabecera flexible de 40 bytes 
+	• Etiquetado de flujo y prioridad: permite identificar paquetes que necesitan un tratamiento especial, por ejemplo tiempo real o calidad de servicio (QoS)
 
 #### Comparación
 
