Correcciones MS II

--- a/3° Año/Metodologia de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/3° Año/Metodologia de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -2,7 +2,6 @@
 
 >[!tldr] ¿Que es en si un Modelo de Ciclo de Vida?
 >No es mas que un conjunto de actividades o pasos que hay que seguir con el objetivo de crear un software, con la mejor calidad posible, acorde a las necesidades y requerimientos de los usuarios.
->- **Respuesta del GPT**: Un modelo de ciclo de vida en el desarrollo de software es un marco conceptual que describe las fases por las que pasa un sistema de software desde su concepción hasta su retiro o finalización. Las etapas incluyen la recolección de requisitos, diseño, implementación, pruebas, mantenimiento y eventualmente el retiro del sistema.
 
 El concepto de Modelo de ciclo de vida en el proceso de desarrollo de software, nace de la mano de la Ingeniería de software, que a su vez apareció después de la llamada gran crisis del software de finales de los años 60'.
 
@@ -15,9 +14,6 @@ El concepto de Modelo de ciclo de vida en el proceso de desarrollo de software, 
 >En general, los ingenieros de software adoptan un enfoque sistemático y organizado en su trabajo, ya que es la forma más efectiva de producir software de alta calidad. Sin embargo, aunque la ingeniería consiste en seleccionar el método más apropiado para un conjunto de circunstancias, un enfoque más informal y creativo de desarrollo podría ser efectivo en algunas circunstancias. El desarrollo informal es apropiado para el desarrollo de sistemas basados en Web, los cuales requieren una mezcla de técnicas de software y de diseño gráfico.
 
 ## Proceso de Desarrollo de Software
-
->[!important] Respuesta del GPT
->Un proceso de software es un conjunto de actividades, métodos, prácticas y transformaciones que se utilizan para desarrollar y mantener software y los productos asociados, como la documentación del proyecto. Un proceso de software sirve como un mapa de ruta para el desarrollo de software, proporcionando una estructura y orden al esfuerzo de desarrollo. Es esencial para organizar el trabajo y garantizar la calidad del software producido.
 
 Un proceso de software es un conjunto de ***actividades relacionadas*** que conducen a la elaboración de un producto de software. Es la aplicación práctica de un modelo de ciclo de vida a un proyecto de software específico. Este desarrollo puede empezar completamente desde cero, comenzar extendiendo un sistema ya existente o modificando un sistema ya existente.
 Todos los procesos de software incluyen cuatro actividades fundamentales:
@@ -34,7 +30,7 @@ Sommerville clasifica los procesos de software en dos categorías, como **dirigi
 >[!caution] Diferencia entre Modelo de Ciclo de Vida y Proceso de Desarrollo de Software
 >El modelo de ciclo de vida del software es una representación teórica y abstracta de las etapas del desarrollo del software, mientras que el proceso de desarrollo de software es la implementación práctica y concreta de un modelo de ciclo de vida en un proyecto específico. El modelo de ciclo de vida proporciona una estructura conceptual, mientras que el proceso de desarrollo de software se enfoca en las tareas y actividades prácticas necesarias para construir un software.
 
-##### Modelos de Procesos de Desarrollo de Software
+### Modelos de Procesos de Desarrollo de Software
 
 Un modelo de proceso de software, es una ***representación simplificada de un proceso o marco conceptual***, estos también son denominados comúnmente como *paradigmas de procesos*. Representan el marco del proceso, pero no los detalles de las actividades específicas.
 Tales modelos genéricos no son descripciones definitivas de los procesos de software. Más bien, son abstracciones del proceso que se utilizan para explicar los diferentes enfoques del desarrollo de software. Se pueden considerar marcos del proceso porque se extienden y se adaptan para crear procesos más específicos de ingeniería de software. Dichos modelos no son mutuamente excluyentes y con frecuencia se usan en conjunto, sobre todo para el desarrollo de grandes sistemas.
@@ -44,6 +40,7 @@ Es importante aclarar que la existencia de un proceso de desarrollo de software 
 >Un modelo de ciclo de vida del software se centra en las fases y transiciones de un producto de software a lo largo de su vida, mientras que un modelo de proceso de desarrollo de software se centra en cómo las personas involucradas en la creación y mantenimiento del software deben llevar a cabo sus actividades.
 
 #### Flujo de Procesos
+
 Se describe la manera en que estan organizadas las actividades estructurales y las acciones y tareas que ocurren dentro de cada una con respecto de la secuencia y el tiempo.
 - Un flujo de proceso lineal ejecuta cada una de las actividades en forma secuencial.
 - Un flujo de proceso iterativo repite una o más de las actividades antes de pasar a la siguiente.
