--- a/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
@@ -1,4 +1,3 @@
-
 ## Definición de Requerimiento
 
 Los requerimientos especifican qué es lo que el sistema debe hacer, es decir, sus funciones, sus propiedades esenciales y deseables. Un requerimiento expresa el propósito del sistema sin considerar como se va a implantar.
@@ -6,7 +5,6 @@ Los requerimientos especifican qué es lo que el sistema debe hacer, es decir, s
 >[!tldr] El Análisis de Requerimientos
 >Es un conjunto de técnicas y procedimientos que nos permiten conocer los elementos necesarios para definir un proyecto de software.
 >El análisis de requerimientos proporciona una vía para que los clientes y los desarrolladores lleguen a un acuerdo sobre lo que debe hacer el sistema. La especificación, producto de este análisis proporciona las pautas a seguir a los diseñadores del sistema.
-
 
 ## Aspectos de un Requerimiento
 
@@ -31,7 +29,7 @@ Las características que debe tener un buen requerimiento está definido en su e
 
 - **Correctos**. Tanto el cliente como el desarrollador deben revisarlos para asegurar que no tienen errores.
 - **Consistentes**. Dos requerimientos son inconsistentes cuando es imposible satisfacerlos simultáneamente, es decir, cuando un requerimiento va en contra de otro.
-- **Completos**. El conjunto de requerimientos está completo si todos los estados posibles, cambios de estado, entradas, productos y restricciones están descritos en alguno de los requerimientos.
+- **Completos**. Un conjunto de requerimientos se considera completo cuando abarca todos los aspectos necesarios para el funcionamiento del sistema. Esto incluye una descripción exhaustiva de todos los estados posibles del sistema, las transiciones entre estos estados, las entradas que el sistema puede recibir, los productos o resultados que debe generar, y cualquier restricción que deba cumplir.
 - **Realistas**. Todos los requerimientos deben ser revisados para asegurar que son posibles.
 -  **Deben ser Verificables**. Se deben poder preparar pruebas que demuestren que se han cumplido los requerimientos.
 - **Deben ser Rastreables**. Se puede rastrear cada función del sistema hasta el conjunto de requerimientos que la establece.
@@ -49,7 +47,7 @@ El Análisis de Requerimientos es un proceso al cual Sommerville, llama ***Ingen
 	3. **Debe ser modificable**: Ninguna especificación puede ser siempre totalmente completa. El entorno en el que existe es demasiado complejo para ello. Una especificación es un modelo, una abstracción, de alguna situación real, por tanto, será incompleta. Además, al ser formulada existirán muchos niveles de detalle.
 - ***Validación***: verificar que los requerimientos realmente definen el sistema que quiere el cliente. Los requerimientos deben ser validados para:
 	- Asegurar que el ingeniero de software los ha comprendido.
-	- El documento de ERS es conforme a los estándares establecidos, comprensible, consistente y completo.
+	- El documento de especificación de requerimientos de software es conforme a los estándares establecidos, comprensible, consistente y completo.
 	- Se trata de asegurar que el documento SRS define el software adecuado, es decir, el que espera el usuario.
 	- Las principales técnicas de validación:
 		- Revisiones: Un grupo de personas lee, analiza, discute el documento de SRS y las formas de solucionar los problemas detectados, es por esta razón que deben participar representantes del cliente y los usuarios.
@@ -65,7 +63,7 @@ El Análisis de Requerimientos es un proceso al cual Sommerville, llama ***Ingen
 >- **Realismo**. Los requerimientos pueden ser implementados con el presupuesto y tecnologías disponibles.
 >- **Verificable**. Los requerimientos pueden ser verificados
 
-La Gestión de Requerimientos implica la recolección, almacenamiento y mantenimiento de grandes cantidades de información. Para ello existen herramientas CASE con base de datos para almacenar requerimientos, facilidades de análisis y generación de documentos, facilidades de gestión de cambios y facilidades de trazabilidad.
+La Gestión de Requerimientos implica la recolección, almacenamiento y mantenimiento de grandes cantidades de información. Para ello existen herramientas CASE con base de datos para almacenar requerimientos, además de brindar facilidades de análisis y generación de documentos, facilidades de gestión de cambios y facilidades de trazabilidad.
 
 ## Requerimientos y Restricciones
 
