--- a/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
@@ -130,7 +130,7 @@ Un componente de software es una parte física de un sistema y se encuentra en l
 - Los desarrolladores cuenten con una estructura con la cual trabajar en adelante. 
 - Ayudar a quienes escriban las notas técnicas y la documentación a entender lo que escriben.
 
-Los Diagramas de Componentes se utilizan para ***modelar código fuente***, ***modelar versiones ejecutables***, ***modelar base de datos físicas***, ***modelar sistemas adaptables***.  Los componentes representan todos los tipos de elementos software que entran en la fabricación de aplicaciones informáticas, mostrando como están organizados y la dependencia que existe entre ellos, cubriendo así la vista de la implementación estática.
+Los Diagramas de Componentes se utilizan para ***modelar código fuente***, ***modelar versiones ejecutables***, ***modelar base de datos físicas***, ***modelar sistemas adaptables***.  Los componentes representan todos los tipos de elementos de software que entran en la fabricación de aplicaciones informáticas, mostrando como están organizados y la dependencia que existe entre ellos, cubriendo así la vista de la implementación estática.
 
 - **Componentes y Clases:** Los componentes son elementos físicos del mundo real. Un componente es la implementación física de un conjunto de otros elementos lógicos, como clases y colaboraciones. UML definen cinco estereotipos estándar que se aplican a los Componentes: 
 	- **Ejecutable**: Especifica un componente que se puede ejecutar en un Nodo. 
