--- a/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
@@ -15,7 +15,7 @@ Cuando más grande y complejo es el sistema, el modelado se hace más importante
 
 ### Lenguaje Unificado de Modelado (UML)
 
-El que es UML, para qué sirve, sumado a todas sus características y distintos diagramas, están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante es que UML no es una metodología, en lenguaje es independiente tanto de la metodología empleada como del lenguaje de programación en el que se realice la implementación.
+El que es UML, para qué sirve, sumado a todas sus características y distintos diagramas, están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante es que UML no es una metodología, más bien es un metalenguaje independiente tanto de la metodología empleada como del lenguaje de programación en el que se realice la implementación.
 El modelo UML consta de 5 tipos de vistas y 9 tipos de diagramas, estos diagramas expresan gráficamente partes de un modelo.
 
 ![[diagramas_uml.png]]
