IP & ICMP en Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -14,7 +14,7 @@ cuál de las interfaces del enlace de salida del router será reenviado el paque
 El **modelo de servicio de red** define las características del transporte punto a punto de los paquetes entre los sistemas terminales emisor y receptor. La capa de red de Internet proporciona un único servicio conocido como ***servicio de mejor esfuerzo*** en la cual la temporización relativa entre paquetes no está garantizada, tampoco está garantizado que los paquetes se reciban en el orden que fueron emitidos y tampoco garantiza la entrega de los paquetes al destino.
 Al igual que la capa de transporte, la capa de red proporciona dos tipos de servicios de conexión, un servicio sin conexión y otro con conexión. Las redes de computadoras que sólo proporcionan un servicio de conexión en la capa de red se conocen como ***redes de circuitos virtuales***. Mientras que las redes que sólo proporcionan un servicio sin conexión en la capa de red se denominan ***redes de datagramas***.
 
-### Redes de Circuitos Virtuales
+## Redes de Circuitos Virtuales
 
 Un circuito virtual esta compuesto por:
 
@@ -27,7 +27,7 @@ En una red de circuitos virtuales, los routers de la red tienen que mantener inf
 Cuando se establece la conexión entre dos máquinas a través de un circuito virtual, la capa de red especifica la dirección de receptor, luego se configura el circuito virtual y se establece por que enlaces y routers pasará el mensaje, además puede que durante esta configuración la red reserve recursos a lo largo de toda la ruta, dado que todos los paquetes siguen el mismo camino dentro de la red, se garantiza que llegarán al destino en el mismo orden en que se enviaron, lo que es especialmente importante para aplicaciones sensibles al orden, como la transmisión de voz o video. Una vez se establece la configuración comienza el envío de paquetes.
 Los mensajes que los sistemas terminales envían a la red para iniciar o terminar un circuito virtual y los mensajes pasados entre los routers para configurar este mismo se conocen como ***mensajes de señalización*** y los protocolos empleados para intercambiar estos mensajes a menudo se denominan ***protocolos de señalización***.
 
-### Redes de Datagramas
+## Redes de Datagramas
 
 En una red de datagramas, cada vez que un sistema terminal desea enviar un paquete marca el paquete con la dirección del sistema terminal de destino y luego introduce el paquete en la red. Cuando un paquete se transmite desde un origen a un destino pasa a través de una serie de routers. Cada uno de estos routers utiliza la dirección de destino del paquete para reenviar dicho paquete, cuando un paquete llega a un router, éste utiliza la dirección de destino del paquete para buscar la interfaz del enlace de salida apropiado en la
 tabla de reenvío. Después, el router reenvía intencionadamente el paquete a esa interfaz del
