--- a/4º Año/Comunicaciones y Redes/Unidad 4/2. Multiplexacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/2. Multiplexacion.md
@@ -1,4 +1,4 @@
-## Multiplexación
+
 La multiplexación es una técnica que permite compartir un único canal de comunicación con múltiples señales simultáneas, como voz, datos, etc. Hay tres técnicas básicas de multiplexación que se utilizan comúnmente:
 
 - Multiplexación por división de frecuencia (FDM)
@@ -8,19 +8,16 @@ La multiplexación es una técnica que permite compartir un único canal de comu
 ### La Multiplexación por División de Frecuencia (FDM)
 
 Es una técnica que se basa en dividir el ancho de banda de un canal de comunicación en varias porciones, cada una dedicada a un subcanal específico que transporta una comunicación determinada.
-### Características de la FDM:
-1. **División del Ancho de Banda:**
-    - El ancho de banda del canal se divide en múltiples subcanales, cada uno destinado a una comunicación particular.
-    - La suma de los anchos de banda de todos los subcanales no debe exceder el ancho de banda total del canal principal.
-2. **Separación de Portadoras:**
-    - Para que las señales puedan transmitirse simultáneamente sin interferencia, las portadoras de cada subcanal se separan en frecuencia.
-    - Es esencial que los anchos de banda de los subcanales no se solapen, lo que garantiza la integridad de las señales transmitidas.
+1. **División del Ancho de Banda:** El ancho de banda del canal se divide en múltiples subcanales, cada uno destinado a una comunicación particular. La suma de los anchos de banda de todos los subcanales no debe exceder el ancho de banda total del canal principal.
+2. **Separación de Portadoras:** Para que las señales puedan transmitirse simultáneamente sin interferencia, las portadoras de cada subcanal se separan en frecuencia, logrando que los anchos de banda de los subcanales no se solapen, garantizando la integridad de las señales transmitidas.
 ### Multiplexación por División de Longitud de Onda (WDM)
 NO ENTENDI
 ### Multiplexación por División de Tiempo (TDM)
+
 Es una técnica que asigna periódicamente y por un tiempo limitado todo el canal de comunicación a una conexión específica. Ese período de tiempo fijo recibe el nombre de slot y en el mismo se transfiere un reducido número de bits (por ej. uno u ocho) por cada conexión entre 2 equipos terminales.
 
 ### Multiplexación Estadística (STDM)
+
 Es una variante del multiplexación por división de tiempo (TDM) que se caracteriza por una asignación dinámica de los slots de tiempo en función del tráfico real de cada conexión.
 Caracteristicas:
 - **Asignación Dinámica de Slots:** En STDM, los slots de tiempo se asignan dinámicamente en función de las conexiones que tienen tráfico para transmitir en un momento dado. Esto significa que no se asignan intervalos de tiempo fijos para cada conexión, sino que se asignan según la demanda.
