Nota de que falta agregar

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -68,3 +68,5 @@ Existen muchas aplicaciones que utilizan UDP por sobre TCP por las siguientes ra
 4. Escasa sobrecarga en las cabeceras del segmento, dado que el encabezado de UDP solo ocupa 8 bytes, en lugar de 20 como pasa son TCP.
 
 Por estas razones, es que protocolos como el NFS, SNMP, RIP o incluso DNS utilizan UDP a la hora de enviar información a otros equipos, además los servicios de telefonía sobre internet y la difusión multimedia suelen emplear este protocolo debido a su velocidad.
+
+## Falta agregar three-way handshake (acuerdo de tres fases). Agregar a que se denomina puerto.
