Se agergo three-way handshaking, protocolo de ventana deslizante | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -9,7 +9,7 @@ Entre los distintos servicios que nos brindan los protocolos de transporte se en
 2. Comprobación de la integridad de los paquetes (cheksum en headers).
 3. Realizar un direccionamiento usando ***sockets***, las cuales son la unión de la dirección IP más el número de puerto.
 
-### Multiplexación y Desmultiplexación
+## Multiplexación y Desmultiplexación
 
 A la hora de enviar datos a través de una red, la capa de transporte recibe los segmentos (PDU) desde la capa de red, y debe entregarlos a los procesos apropiados que corren en los hosts. Por ejemplo: un usuario ejecutando varias aplicaciones (ftp, telnet, http) entonces es necesario direccionar los segmentos a cada uno de los procesos.
 Cada proceso tiene un ***socket*** que es el lugar por donde se reciben y entregan los datos entre la capa de red y la capa de transporte. Puede haber más de un socket abierto, por eso cada socket tiene un identificar único, según sea TCP o UDP.
@@ -21,10 +21,9 @@ Cada uno de los sockets debe tener un identificador único, además, cada segmen
 ![[redes-segmento.png]]
 
 >[!note] Los Puertos
->Cada puerto tiene un número de 16 bits que va de 0 a 65.535. De los cuales los puertos del 0 al 1023 son los llamados “***well-know***” y están reservados para ser usados por protocolos de aplicación, los demás son puertos “***efímeros***” que pueden ser usados por procesos que quieren direccionar a esos protocolos de aplicación.
->Si se desea saber más sobre los distintos tipos de puertos puede visitar el sitio de la [Autoridad Asignadora de Números de Internet (IANA)](www.iana.org).
+>Un puerto es un número de identificación que se utiliza para dirigir el tráfico de datos a una aplicación o proceso en específico o a un servicio en un dispositivo de red. Todos los puertos están asociados a una direcciones IP en el modelo de comunicación TCP/IP. Cada puerto tiene un número de 16 bits que va de 0 a 65.535. De los cuales los puertos del 0 al 1023 son los llamados “***well-know***” y están reservados para ser usados por protocolos de aplicación, los demás son puertos “***efímeros***” que pueden ser usados por procesos que quieren direccionar peticiones a esos protocolos de aplicación.
 
-### Transmission Control Protocol (TCP)
+## Transmission Control Protocol (TCP)
 
 El Protocolo de Control de Transmisión es uno de los métodos de transferencia de datos fiable, ya que utiliza técnicas de control de flujo, números de secuencia, mensajes de reconocimiento y temporizadores para garantizar que los datos transmitidos por el emisor sean entregados al receptor. Este protocolo establece y mantiene una conexión entre el emisor y el receptor durante el proceso de transferencia. Las principales características de este método son:
 
@@ -47,7 +46,14 @@ Con la desventaja de que TCP no garantiza una tasa de transmisión mínima, es d
 >	- ARQ con adelante-atrás N.
 >	- ARQ con rechazo selectivo.
 
-### User Datagram Protocol (UDP)
+Para establecer una conexión a través de TCP, se lleva a cabo un acuerdo de tres fases entre el emisor y el receptor, en el primera fase el dispositivo cliente envía un segmento TCP con un número aleatorio y la bandera SYN, en la segunda fase el servidor envía otro segmento TCP con la misma bandera de SYN, además de enviar el acuso de recibo o ACK que indica que el mensaje del cliente a sido recibido, por último el cliente envía al servidor un ACK indicando que esta listo para recibir datos por parte del servidor.
+Este acuerdo es utilizado para establecer una conexión segura y confiable entre dos dispositivos en una red, garantizando que la información se transmita correctamente y en orden.
+
+>[!note] Protocolo de Ventanas Deslizantes
+>El protocolo de ventanas deslizantes es un mecanismo de control de flujo que permite la transmisión eficiente y confiable de datos entre un emisor y un receptor. Este protocolo se encarga de gestionar la cantidad de información que puede ser enviada antes de necesitar un acuse de recibo (ACK) por parte del receptor, asegurando así que no se sature la capacidad del receptor ni se pierdan datos en el proceso.
+>Entre las principales funciones de este protocolo se encuentra la optimización del ancho de banda, la prevención en la perdida de datos, la adaptación dinámica del tamaño de las ventanas de acuerdo al estado de la red y la fluidez de la comunicación.
+
+## User Datagram Protocol (UDP)
 
 El Protocolo de Datagrama de Usuario es un protocolo de comunicación que se utiliza en Internet para transmisiones sujetas a limitaciones temporales, como la reproducción de vídeo o las búsquedas en DNS. Acelera las comunicaciones al no establecer formalmente una conexión antes de transferir datos, por eso se dice que es un protocolo no fiable, ya que no garantiza la llegada de los datos a destino.
 Este protocolo permite que los datos se transfieran muy rápido, pero también puede hacer que los paquetes se pierdan. Las características principales de este protocolo son las siguientes:
@@ -68,5 +74,3 @@ Existen muchas aplicaciones que utilizan UDP por sobre TCP por las siguientes ra
 4. Escasa sobrecarga en las cabeceras del segmento, dado que el encabezado de UDP solo ocupa 8 bytes, en lugar de 20 como pasa son TCP.
 
 Por estas razones, es que protocolos como el NFS, SNMP, RIP o incluso DNS utilizan UDP a la hora de enviar información a otros equipos, además los servicios de telefonía sobre internet y la difusión multimedia suelen emplear este protocolo debido a su velocidad.
-
-## Falta agregar three-way handshake (acuerdo de tres fases). Agregar a que se denomina puerto.
